--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>0</h1>
     <h2></h2>
+    <h3 class="progressBar"></h3>
     <div>
       <img class="anim" src="./background_elements/background.gif" alt="" />
       <img class="png" src="./background_elements/2336.png" alt="" />
