--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <audio class="gauche" src="./Sons/gauche.mp3"></audio>
     <audio class="alarme" src="./Sons/alarme.mp3"></audio>
+    <audio class="woosh" src="./Sons/woosh.wav"></audio>
 
     <span><img class="tapette" src="./image/clap.gif" alt="" /></span>
     <span><img class="splash" src="./image/CLOSE.gif" alt="" /></span>
