--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
   <body>
     <h1>0</h1>
     <h2></h2>
+    <h4 class="message">Time left to use the super "mosquito swatter"</h3>
     <h3 class="progressBar"></h3>
     <div>
-      <img class="anim" src="./background_elements/background.gif" alt="" />
+      <img class="anim" src="" alt="" />
       <img class="png" src="./background_elements/2336.png" alt="" />
       <span><img class="bonus" src="./image/bonus.gif" alt="" /></span>
     </div>
 
-    <audio class="droite" src="./Sons/droite.mp3"></audio>
-
-    <audio class="gauche" src="./Sons/gauche.mp3"></audio>
     <audio class="alarme" src="./Sons/alarme.mp3"></audio>
-    <audio class="woosh" src="./Sons/woosh.wav"></audio>
 
     <span><img class="tapette" src="./image/clap.gif" alt="" /></span>
     <span><img class="splash" src="./image/CLOSE.gif" alt="" /></span>
